fix night config fixes incompatibility